issuemd.parser.js
module.exports = (function() {
  'use strict'

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() {
      this.constructor = child
    }
    ctor.prototype = parent.prototype
    child.prototype = new ctor()
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message = message
    this.expected = expected
    this.found = found
    this.location = location
    this.name = 'SyntaxError'

    if (typeof Error.captureStackTrace === 'function') {
      Error.captureStackTrace(this, peg$SyntaxError)
    }
  }

  peg$subclass(peg$SyntaxError, Error)

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
      parser = this,
      peg$FAILED = {},
      peg$startRuleFunctions = { COLLECTION: peg$parseCOLLECTION },
      peg$startRuleFunction = peg$parseCOLLECTION,
      peg$c0 = function(issues) {
        return issues
      },
      peg$c1 = function(title, original, body, updates) {
        original.title = title
        original.body = body || ''
        return { original: original, updates: updates }
      },
      peg$c2 = '##',
      peg$c3 = { type: 'literal', value: '##', description: '"##"' },
      peg$c4 = function(title) {
        return title.join('')
      },
      peg$c5 = function(created, creator, meta) {
        return {
          // reserve space for title, to retain order of attributes (mostly for testing purposes)
          title: null,
          created: created,
          creator: creator,
          meta: meta
        }
      },
      peg$c6 = function(modified, modifier, type, meta) {
        return {
          modified: modified,
          modifier: modifier,
          type: type,
          meta: meta
        }
      },
      peg$c7 = 'created',
      peg$c8 = { type: 'literal', value: 'created', description: '"created"' },
      peg$c9 = function(value) {
        return value
      },
      peg$c10 = 'creator',
      peg$c11 = { type: 'literal', value: 'creator', description: '"creator"' },
      peg$c12 = 'modified',
      peg$c13 = { type: 'literal', value: 'modified', description: '"modified"' },
      peg$c14 = 'modifier',
      peg$c15 = { type: 'literal', value: 'modifier', description: '"modifier"' },
      peg$c16 = 'type',
      peg$c17 = { type: 'literal', value: 'type', description: '"type"' },
      peg$c18 = function(label, value) {
        return { key: label, value: value }
      },
      peg$c19 = '+',
      peg$c20 = { type: 'literal', value: '+', description: '"+"' },
      peg$c21 = ':',
      peg$c22 = { type: 'literal', value: ':', description: '":"' },
      peg$c23 = function(value) {
        return value.join('')
      },
      peg$c24 = function(body) {
        return body
      },
      peg$c25 = function(update, body) {
        update.body = body || ''
        return update
      },
      peg$c26 = '---',
      peg$c27 = { type: 'literal', value: '---', description: '"---"' },
      peg$c28 = { type: 'any', description: 'any character' },
      peg$c29 = function(char) {
        return char
      },
      peg$c30 = function(content) {
        return content.join('')
      },
      peg$c31 = /^[a-zA-Z]/,
      peg$c32 = { type: 'class', value: '[a-zA-Z]', description: '[a-zA-Z]' },
      peg$c33 = /^[a-zA-Z0-9_\-]/,
      peg$c34 = { type: 'class', value: '[a-zA-Z0-9_-]', description: '[a-zA-Z0-9_-]' },
      peg$c35 = function(start, rest) {
        return start + rest.join('')
      },
      peg$c36 = '\r\n',
      peg$c37 = { type: 'literal', value: '\r\n', description: '"\\r\\n"' },
      peg$c38 = '\r',
      peg$c39 = { type: 'literal', value: '\r', description: '"\\r"' },
      peg$c40 = '\n',
      peg$c41 = { type: 'literal', value: '\n', description: '"\\n"' },
      peg$c42 = ' ',
      peg$c43 = { type: 'literal', value: ' ', description: '" "' },
      peg$c44 = '\t',
      peg$c45 = { type: 'literal', value: '\t', description: '"\\t"' },
      peg$currPos = 0,
      peg$savedPos = 0,
      peg$posDetailsCache = [{ line: 1, column: 1, seenCR: false }],
      peg$maxFailPos = 0,
      peg$maxFailExpected = [],
      peg$silentFails = 0,
      peg$result

    if ('startRule' in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error('Can\'t start parsing from rule "' + options.startRule + '".')
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule]
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos)
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos)
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: 'other', description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      )
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      )
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
        p,
        ch

      if (details) {
        return details
      } else {
        p = pos - 1
        while (!peg$posDetailsCache[p]) {
          p--
        }

        details = peg$posDetailsCache[p]
        details = {
          line: details.line,
          column: details.column,
          seenCR: details.seenCR
        }

        while (p < pos) {
          ch = input.charAt(p)
          if (ch === '\n') {
            if (!details.seenCR) {
              details.line++
            }
            details.column = 1
            details.seenCR = false
          } else if (ch === '\r' || ch === '\u2028' || ch === '\u2029') {
            details.line++
            details.column = 1
            details.seenCR = true
          } else {
            details.column++
            details.seenCR = false
          }

          p++
        }

        peg$posDetailsCache[pos] = details
        return details
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails = peg$computePosDetails(endPos)

      return {
        start: {
          offset: startPos,
          line: startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line: endPosDetails.line,
          column: endPosDetails.column
        }
      }
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) {
        return
      }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos
        peg$maxFailExpected = []
      }

      peg$maxFailExpected.push(expected)
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1
          } else if (a.description > b.description) {
            return 1
          } else {
            return 0
          }
        })

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1)
          } else {
            i++
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) {
            return ch
              .charCodeAt(0)
              .toString(16)
              .toUpperCase()
          }

          return s
            .replace(/\\/g, '\\\\')
            .replace(/"/g, '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g, '\\t')
            .replace(/\n/g, '\\n')
            .replace(/\f/g, '\\f')
            .replace(/\r/g, '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) {
              return '\\x0' + hex(ch)
            })
            .replace(/[\x10-\x1F\x80-\xFF]/g, function(ch) {
              return '\\x' + hex(ch)
            })
            .replace(/[\u0100-\u0FFF]/g, function(ch) {
              return '\\u0' + hex(ch)
            })
            .replace(/[\u1000-\uFFFF]/g, function(ch) {
              return '\\u' + hex(ch)
            })
        }

        var expectedDescs = new Array(expected.length),
          expectedDesc,
          foundDesc,
          i

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description
        }

        expectedDesc =
          expected.length > 1
            ? expectedDescs.slice(0, -1).join(', ') + ' or ' + expectedDescs[expected.length - 1]
            : expectedDescs[0]

        foundDesc = found ? '"' + stringEscape(found) + '"' : 'end of input'

        return 'Expected ' + expectedDesc + ' but ' + foundDesc + ' found.'
      }

      if (expected !== null) {
        cleanupExpected(expected)
      }

      return new peg$SyntaxError(message !== null ? message : buildMessage(expected, found), expected, found, location)
    }

    function peg$parseCOLLECTION() {
      var s0, s1, s2

      s0 = peg$currPos
      s1 = []
      s2 = peg$parseISSUE()
      while (s2 !== peg$FAILED) {
        s1.push(s2)
        s2 = peg$parseISSUE()
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0
        s1 = peg$c0(s1)
      }
      s0 = s1

      return s0
    }

    function peg$parseISSUE() {
      var s0, s1, s2, s3, s4, s5

      s0 = peg$currPos
      s1 = peg$parseTITLE()
      if (s1 !== peg$FAILED) {
        s2 = peg$parseISSUE_META()
        if (s2 !== peg$FAILED) {
          s3 = peg$parseBODY()
          if (s3 === peg$FAILED) {
            s3 = null
          }
          if (s3 !== peg$FAILED) {
            s4 = []
            s5 = peg$parseUPDATE()
            while (s5 !== peg$FAILED) {
              s4.push(s5)
              s5 = peg$parseUPDATE()
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseDIVIDER()
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0
                s1 = peg$c1(s1, s2, s3, s4)
                s0 = s1
              } else {
                peg$currPos = s0
                s0 = peg$FAILED
              }
            } else {
              peg$currPos = s0
              s0 = peg$FAILED
            }
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parseTITLE() {
      var s0, s1, s2, s3, s4

      s0 = peg$currPos
      if (input.substr(peg$currPos, 2) === peg$c2) {
        s1 = peg$c2
        peg$currPos += 2
      } else {
        s1 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c3)
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = []
        s3 = peg$parseSPACE()
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3)
            s3 = peg$parseSPACE()
          }
        } else {
          s2 = peg$FAILED
        }
        if (s2 !== peg$FAILED) {
          s3 = []
          s4 = peg$parseTO_EOL()
          while (s4 !== peg$FAILED) {
            s3.push(s4)
            s4 = peg$parseTO_EOL()
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0
            s1 = peg$c4(s3)
            s0 = s1
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parseISSUE_META() {
      var s0, s1, s2, s3, s4

      s0 = peg$currPos
      s1 = peg$parseMETA_CREATED()
      if (s1 !== peg$FAILED) {
        s2 = peg$parseMETA_CREATOR()
        if (s2 !== peg$FAILED) {
          s3 = []
          s4 = peg$parseMETA_ITEM()
          while (s4 !== peg$FAILED) {
            s3.push(s4)
            s4 = peg$parseMETA_ITEM()
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0
            s1 = peg$c5(s1, s2, s3)
            s0 = s1
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parseUPDATE_META() {
      var s0, s1, s2, s3, s4, s5

      s0 = peg$currPos
      s1 = peg$parseMETA_MODIFIED()
      if (s1 !== peg$FAILED) {
        s2 = peg$parseMETA_MODIFIER()
        if (s2 !== peg$FAILED) {
          s3 = peg$parseMETA_TYPE()
          if (s3 !== peg$FAILED) {
            s4 = []
            s5 = peg$parseMETA_ITEM()
            while (s5 !== peg$FAILED) {
              s4.push(s5)
              s5 = peg$parseMETA_ITEM()
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0
              s1 = peg$c6(s1, s2, s3, s4)
              s0 = s1
            } else {
              peg$currPos = s0
              s0 = peg$FAILED
            }
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parseMETA_CREATED() {
      var s0, s1, s2, s3, s4

      s0 = peg$currPos
      s1 = peg$parseMETA_START()
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 7) === peg$c7) {
          s2 = peg$c7
          peg$currPos += 7
        } else {
          s2 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c8)
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseMETA_SEPARATOR()
          if (s3 !== peg$FAILED) {
            s4 = peg$parseMETA_VALUE()
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0
              s1 = peg$c9(s4)
              s0 = s1
            } else {
              peg$currPos = s0
              s0 = peg$FAILED
            }
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parseMETA_CREATOR() {
      var s0, s1, s2, s3, s4

      s0 = peg$currPos
      s1 = peg$parseMETA_START()
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 7) === peg$c10) {
          s2 = peg$c10
          peg$currPos += 7
        } else {
          s2 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c11)
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseMETA_SEPARATOR()
          if (s3 !== peg$FAILED) {
            s4 = peg$parseMETA_VALUE()
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0
              s1 = peg$c9(s4)
              s0 = s1
            } else {
              peg$currPos = s0
              s0 = peg$FAILED
            }
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parseMETA_MODIFIED() {
      var s0, s1, s2, s3, s4

      s0 = peg$currPos
      s1 = peg$parseMETA_START()
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 8) === peg$c12) {
          s2 = peg$c12
          peg$currPos += 8
        } else {
          s2 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c13)
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseMETA_SEPARATOR()
          if (s3 !== peg$FAILED) {
            s4 = peg$parseMETA_VALUE()
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0
              s1 = peg$c9(s4)
              s0 = s1
            } else {
              peg$currPos = s0
              s0 = peg$FAILED
            }
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parseMETA_MODIFIER() {
      var s0, s1, s2, s3, s4

      s0 = peg$currPos
      s1 = peg$parseMETA_START()
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 8) === peg$c14) {
          s2 = peg$c14
          peg$currPos += 8
        } else {
          s2 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c15)
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseMETA_SEPARATOR()
          if (s3 !== peg$FAILED) {
            s4 = peg$parseMETA_VALUE()
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0
              s1 = peg$c9(s4)
              s0 = s1
            } else {
              peg$currPos = s0
              s0 = peg$FAILED
            }
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parseMETA_TYPE() {
      var s0, s1, s2, s3, s4

      s0 = peg$currPos
      s1 = peg$parseMETA_START()
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 4) === peg$c16) {
          s2 = peg$c16
          peg$currPos += 4
        } else {
          s2 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c17)
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseMETA_SEPARATOR()
          if (s3 !== peg$FAILED) {
            s4 = peg$parseMETA_VALUE()
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0
              s1 = peg$c9(s4)
              s0 = s1
            } else {
              peg$currPos = s0
              s0 = peg$FAILED
            }
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parseMETA_ITEM() {
      var s0, s1, s2, s3, s4

      s0 = peg$currPos
      s1 = peg$parseMETA_START()
      if (s1 !== peg$FAILED) {
        s2 = peg$parseKEYWORD()
        if (s2 !== peg$FAILED) {
          s3 = peg$parseMETA_SEPARATOR()
          if (s3 !== peg$FAILED) {
            s4 = peg$parseMETA_VALUE()
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0
              s1 = peg$c18(s2, s4)
              s0 = s1
            } else {
              peg$currPos = s0
              s0 = peg$FAILED
            }
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parseMETA_START() {
      var s0, s1, s2, s3, s4

      s0 = peg$currPos
      s1 = peg$parseNEWLINE()
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 43) {
          s2 = peg$c19
          peg$currPos++
        } else {
          s2 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c20)
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = []
          s4 = peg$parseSPACE()
          if (s4 !== peg$FAILED) {
            while (s4 !== peg$FAILED) {
              s3.push(s4)
              s4 = peg$parseSPACE()
            }
          } else {
            s3 = peg$FAILED
          }
          if (s3 !== peg$FAILED) {
            s1 = [s1, s2, s3]
            s0 = s1
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parseMETA_SEPARATOR() {
      var s0, s1, s2

      s0 = peg$currPos
      if (input.charCodeAt(peg$currPos) === 58) {
        s1 = peg$c21
        peg$currPos++
      } else {
        s1 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c22)
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseWHITESPACE()
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2]
          s0 = s1
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parseMETA_VALUE() {
      var s0, s1, s2

      s0 = peg$currPos
      s1 = []
      s2 = peg$parseTO_EOL()
      while (s2 !== peg$FAILED) {
        s1.push(s2)
        s2 = peg$parseTO_EOL()
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0
        s1 = peg$c23(s1)
      }
      s0 = s1

      return s0
    }

    function peg$parseBODY() {
      var s0, s1, s2

      s0 = peg$currPos
      s1 = peg$parseDIVIDER()
      if (s1 !== peg$FAILED) {
        s2 = peg$parseTO_DELIMITER()
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0
          s1 = peg$c24(s2)
          s0 = s1
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parseUPDATE() {
      var s0, s1, s2, s3, s4

      s0 = peg$currPos
      s1 = peg$parseDIVIDER()
      if (s1 !== peg$FAILED) {
        s2 = peg$parseUPDATE_DELIMITER()
        if (s2 !== peg$FAILED) {
          s3 = peg$parseUPDATE_META()
          if (s3 !== peg$FAILED) {
            s4 = peg$parseBODY()
            if (s4 === peg$FAILED) {
              s4 = null
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0
              s1 = peg$c25(s3, s4)
              s0 = s1
            } else {
              peg$currPos = s0
              s0 = peg$FAILED
            }
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parseUPDATE_DELIMITER() {
      var s0

      if (input.substr(peg$currPos, 3) === peg$c26) {
        s0 = peg$c26
        peg$currPos += 3
      } else {
        s0 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c27)
        }
      }

      return s0
    }

    function peg$parseDELIMITER() {
      var s0, s1, s2, s3, s4

      s0 = peg$currPos
      s1 = peg$parseDIVIDER()
      if (s1 !== peg$FAILED) {
        s2 = peg$parseEOF()
        if (s2 === peg$FAILED) {
          s2 = peg$currPos
          s3 = peg$parseUPDATE_DELIMITER()
          if (s3 !== peg$FAILED) {
            s4 = peg$parseMETA_ITEM()
            if (s4 !== peg$FAILED) {
              s3 = [s3, s4]
              s2 = s3
            } else {
              peg$currPos = s2
              s2 = peg$FAILED
            }
          } else {
            peg$currPos = s2
            s2 = peg$FAILED
          }
          if (s2 === peg$FAILED) {
            s2 = peg$currPos
            s3 = peg$parseTITLE()
            if (s3 !== peg$FAILED) {
              s4 = peg$parseMETA_ITEM()
              if (s4 !== peg$FAILED) {
                s3 = [s3, s4]
                s2 = s3
              } else {
                peg$currPos = s2
                s2 = peg$FAILED
              }
            } else {
              peg$currPos = s2
              s2 = peg$FAILED
            }
          }
        }
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2]
          s0 = s1
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parseTO_EOL() {
      var s0, s1, s2

      s0 = peg$currPos
      s1 = peg$currPos
      peg$silentFails++
      s2 = peg$parseNEWLINE()
      peg$silentFails--
      if (s2 === peg$FAILED) {
        s1 = void 0
      } else {
        peg$currPos = s1
        s1 = peg$FAILED
      }
      if (s1 !== peg$FAILED) {
        if (input.length > peg$currPos) {
          s2 = input.charAt(peg$currPos)
          peg$currPos++
        } else {
          s2 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c28)
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0
          s1 = peg$c29(s2)
          s0 = s1
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parseTO_DELIMITER() {
      var s0, s1, s2, s3, s4

      s0 = peg$currPos
      s1 = []
      s2 = peg$currPos
      s3 = peg$currPos
      peg$silentFails++
      s4 = peg$parseDELIMITER()
      peg$silentFails--
      if (s4 === peg$FAILED) {
        s3 = void 0
      } else {
        peg$currPos = s3
        s3 = peg$FAILED
      }
      if (s3 !== peg$FAILED) {
        if (input.length > peg$currPos) {
          s4 = input.charAt(peg$currPos)
          peg$currPos++
        } else {
          s4 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c28)
          }
        }
        if (s4 !== peg$FAILED) {
          peg$savedPos = s2
          s3 = peg$c29(s4)
          s2 = s3
        } else {
          peg$currPos = s2
          s2 = peg$FAILED
        }
      } else {
        peg$currPos = s2
        s2 = peg$FAILED
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2)
        s2 = peg$currPos
        s3 = peg$currPos
        peg$silentFails++
        s4 = peg$parseDELIMITER()
        peg$silentFails--
        if (s4 === peg$FAILED) {
          s3 = void 0
        } else {
          peg$currPos = s3
          s3 = peg$FAILED
        }
        if (s3 !== peg$FAILED) {
          if (input.length > peg$currPos) {
            s4 = input.charAt(peg$currPos)
            peg$currPos++
          } else {
            s4 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$c28)
            }
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s2
            s3 = peg$c29(s4)
            s2 = s3
          } else {
            peg$currPos = s2
            s2 = peg$FAILED
          }
        } else {
          peg$currPos = s2
          s2 = peg$FAILED
        }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0
        s1 = peg$c30(s1)
      }
      s0 = s1

      return s0
    }

    function peg$parseKEYWORD() {
      var s0, s1, s2, s3

      s0 = peg$currPos
      if (peg$c31.test(input.charAt(peg$currPos))) {
        s1 = input.charAt(peg$currPos)
        peg$currPos++
      } else {
        s1 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c32)
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = []
        if (peg$c33.test(input.charAt(peg$currPos))) {
          s3 = input.charAt(peg$currPos)
          peg$currPos++
        } else {
          s3 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c34)
          }
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3)
          if (peg$c33.test(input.charAt(peg$currPos))) {
            s3 = input.charAt(peg$currPos)
            peg$currPos++
          } else {
            s3 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$c34)
            }
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0
          s1 = peg$c35(s1, s2)
          s0 = s1
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parseDIVIDER() {
      var s0, s1, s2

      s0 = peg$currPos
      s1 = peg$parseNEWLINE()
      if (s1 !== peg$FAILED) {
        s2 = peg$parseNEWLINE()
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2]
          s0 = s1
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parseNEWLINE() {
      var s0

      if (input.substr(peg$currPos, 2) === peg$c36) {
        s0 = peg$c36
        peg$currPos += 2
      } else {
        s0 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c37)
        }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 13) {
          s0 = peg$c38
          peg$currPos++
        } else {
          s0 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c39)
          }
        }
        if (s0 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 10) {
            s0 = peg$c40
            peg$currPos++
          } else {
            s0 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$c41)
            }
          }
        }
      }

      return s0
    }

    function peg$parseSPACE() {
      var s0

      if (input.charCodeAt(peg$currPos) === 32) {
        s0 = peg$c42
        peg$currPos++
      } else {
        s0 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c43)
        }
      }

      return s0
    }

    function peg$parseWHITESPACE() {
      var s0

      if (input.charCodeAt(peg$currPos) === 9) {
        s0 = peg$c44
        peg$currPos++
      } else {
        s0 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c45)
        }
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseSPACE()
      }

      return s0
    }

    function peg$parseEOF() {
      var s0, s1

      s0 = peg$currPos
      peg$silentFails++
      if (input.length > peg$currPos) {
        s1 = input.charAt(peg$currPos)
        peg$currPos++
      } else {
        s1 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c28)
        }
      }
      peg$silentFails--
      if (s1 === peg$FAILED) {
        s0 = void 0
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    peg$result = peg$startRuleFunction()

    if (peg$result !== peg$FAILED && peg$currPos === input.length) {
      return peg$result
    } else {
      if (peg$result !== peg$FAILED && peg$currPos < input.length) {
        peg$fail({ type: 'end', description: 'end of input' })
      }

      throw peg$buildException(
        null,
        peg$maxFailExpected,
        peg$maxFailPos < input.length ? input.charAt(peg$maxFailPos) : null,
        peg$maxFailPos < input.length
          ? peg$computeLocation(peg$maxFailPos, peg$maxFailPos + 1)
          : peg$computeLocation(peg$maxFailPos, peg$maxFailPos)
      )
    }
  }

  return {
    SyntaxError: peg$SyntaxError,
    parse: peg$parse
  }
})()
